# special-bassoon

./: README.md
backend/: .gitignore  CMakeLists.txt
backend-microservices/: .gitignore  CMakeLists.txt  README.md
backend-microservices/chatserver/src/: chat_channel_server.cpp  chat_channel_service.h  configuration_models.h
backend-microservices/common/: CMakeLists.txt
backend-microservices/common/src/: commonlib.h  operation_models.h
backend-microservices/presenceservice/: CMakeLists.txt
backend-microservices/presenceservice/src/: CMakeLists.txt  presence_cache.cpp  presence_cache.h  presence_recorder.cpp  presence_recorder_service.cpp  presence_retriever_service.h  service_models.h  service_runner.cpp
backend-microservices/presenceservice/tests/: CMakeLists.txt  CMakeLists.txt.in  presence_cache_tests.cpp  presence_recorder_service_tests.cpp  presence_retriever_service_tests.cpp
backend/chatserver/: CMakeLists.txt
backend/chatserver/app/: CMakeLists.txt  Yello.cpp  main.cpp
backend/chatserver/src/: CMakeLists.txt  Yello.cpp  chat_channel_service.cpp  main.cpp  service_runner.cpp  service_runner.h
backend/chatserver/tests/: CMakeLists.txt  testgtest.cpp
backend/common/src/: CMakeLists.txt  utils.cpp  utils.h
backend/presenceservice/: CMakeLists.txt
backend/presenceservice/app/: CMakeLists.txt  main.cpp
backend/presenceservice/include/presenceservice/: Yello.hpp
backend/presenceservice/src/: CMakeLists.txt  Yello.cpp  main.cpp  presence_cache.cpp  presence_cache.h  presence_recorder.cpp  presence_recorder_service.cpp  presence_recorder_service.h  presence_retriever.cpp  presence_retriever_service.cpp  presence_retriever_service.h  presence_server.cpp  service_models.h  service_runner.cpp  utils.cpp  utils.h
backend/presenceservice/tests/: CMakeLists.txt  presence_cache_mock.h  presence_cache_tests.cpp  presence_recorder_service_tests.cpp  presence_recorder_tests.cpp  presence_retriever_service_tests.cpp  testgtest.cpp
backend/protos/: helloworld.proto  presence.proto
backend/receiptservice/: CMakeLists.txt
backend/receiptservice/app/: CMakeLists.txt  main.cpp
backend/receiptservice/include/receiptservice/: Yello.hpp
backend/receiptservice/src/: CMakeLists.txt  Yello.cpp
backend/receiptservice/tests/: CMakeLists.txt  testgtest.cpp
protos/: chatting.proto  presence.proto
